crates/solidity-v2/testing/snapshots/diagnostics_output/syntax/multiple_virtual_specifiers/receive_functions/generated/slang/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

Error: Only a single virtual specifier can be provided.
   ╭─[input.sol:5:40]
   │
 5 │     receive() external payable virtual virtual {}
   │                                        ───┬───  
   │                                           ╰───── Error occurred here.
───╯
